# ti_cc3200_quadcopter

./: .gitignore  README.md
dev/: CMakeLists.txt  README.md
dev/src/: CMakeLists.txt  main.cc
dev/src/inc/: joystick.h  xbox360ctlr.h
dev/src/joystick/: CMakeLists.txt  joystick.cc  xbox360ctlr.cc
hw/: README.md
hw/controlBoard/: cc3200_camera_RF.sch  cc3200_quad-B_Cu.gbr  cc3200_quad-B_Mask.gbr  cc3200_quad-B_SilkS.gbr  cc3200_quad-Edge_Cuts.gbr  cc3200_quad-F_Cu.gbr  cc3200_quad-F_Mask.gbr  cc3200_quad-F_SilkS.gbr  cc3200_quad-In1_Cu.gbr  cc3200_quad-In2_Cu.gbr  cc3200_quad.cmp  cc3200_quad.drl  cc3200_quad.kicad_pcb  cc3200_quad.net  cc3200_quad.pro  cc3200_quad.sch  cc3200_quad.xml  cc3200_quad_accel.sch  cc3200_quad_gyroscope.sch  cc3200_quad_power.sch  cc3200_quad_pressure.sch  fp-lib-table
hw/lib/: cc3200_quad.dcm  cc3200_quad.lib
hw/lib/footprints.pretty/: 5mm_cap_smd_mount.kicad_mod  ABS07.kicad_mod  AH316M.kicad_mod  AP7363-TO252-3.kicad_mod  D6R90.kicad_mod  DEA202450BT.kicad_mod  DIP_SWITCH_2.kicad_mod  EVQ11_Push_Switch.kicad_mod  FXAS21002C.kicad_mod  JS102011SAQN.kicad_mod  JST_2PIN_2mm.kicad_mod  LSM9DS1.kicad_mod  (+9 more)
sw/: Makefile  ahrs.c  ahrs.h  config.h  kf.c  kf.h  led.c  led.h  linker.ld  main.c  motors.c  motors.h  mpu6050.c  mpu6050.h  packet.c  packet.h  packet.proto  pid.c  pid.h  pinmux.c  pinmux.h  sensors.c  sensors.h  stabilizer.c  stabilizer.h  wifi.c  wifi.h
tester/: tester.py
ui/: joystick.cpp  joystick.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.h  ui.pro  visualiser.cpp  visualiser.h  wifi.cpp  wifi.h
(+4 files in other folders)
